Fix font and spacing

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -7,7 +7,7 @@
 }
 
 .navLink {
-  font-weight: 500;
+  font-weight: bold;
   font-size: 1.2em;
   color: var(--theme-page-text) !important;
 } 
