--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -9,5 +9,5 @@
   font-family: "Geomanist";
   src: url("/fonts/hinted-Geomanist-Medium.ttf");
   font-display: auto;
-  font-weight: 500;
+  font-weight: bold;
 }
