--- a/src/sections/Projects/Card/Card.module.scss
+++ b/src/sections/Projects/Card/Card.module.scss
@@ -16,7 +16,7 @@
 }
 
 .name {
-  font-weight: 500;
+  font-weight: bold;
   font-size: 1.2em;
   margin-bottom: 8px;
 }
