--- a/src/sections/Projects/Projects.module.scss
+++ b/src/sections/Projects/Projects.module.scss
@@ -8,6 +8,7 @@
 
 .header {
   color: var(--theme-page-text);
+  font-weight: bold;
 }
 
 .headerNum {
